--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
     "crypto-js": "^4.2.0",
     "eslint": "^9.21.0",
@@ -46,7 +47,8 @@
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.8",
     "vue-i18n": "10",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^2.2.8",
+    "vue3-apexcharts": "^1.8.0"
   },
   "packageManager": "yarn@4.7.0"
 }
