--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "lucide-vue-next": "^0.485.0",
     "npm-run-all2": "^7.0.2",
     "ol": "^10.4.0",
     "prettier": "3.5.3",
     "sass": "^1.86.0",
+    "sass-migrator": "^2.3.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.14",
     "typescript": "~5.8.0",
@@ -52,5 +54,5 @@
     "vue-tsc": "^2.2.8",
     "vue3-apexcharts": "^1.8.0"
   },
-  "packageManager": "yarn@4.7.0"
+  "packageManager": "yarn@4.8.1"
 }
