--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/crypto-js": "^4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.9",
+    "@types/ol": "^7.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/eslint-plugin": "^1.1.36",
     "@vue/eslint-config-prettier": "^10.2.0",
