--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -24,6 +25,7 @@
     "@turf/turf": "^7.2.0",
     "@types/crypto-js": "^4",
     "@types/jsdom": "^21.1.7",
+    "@types/lodash": "^4",
     "@types/node": "^22.13.9",
     "@types/ol": "^7.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
